--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,18 +9,30 @@
     <link rel="stylesheet" href="stylecss.css">
 </head>
 <body>
-    <nav class="navbar bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">Calculation Trainer</span>
+          <a class="navbar-brand" href="#">Small 1x1 Trainer</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link" href="/small1x1">Small 1x1</a>
+                <a class="nav-link" href="/1x1upto20">1x1 up to 20</a>
+                <a class="nav-link" href="/1x1upto50">1x1 up to 50</a>
+                <a class="nav-link" href="/1x1upto100">1x1 up to 100</a>
+            </div>
+          </div>
         </div>
-    </nav>
+      </nav>
     <h4 class="container mt-3">What would you like to start with?</h4>
     <div class="container mt-3">
         <div class="d-flex justify-content-between">
-            <button type="button" class="btn btn-primary">Small 1x1</button>
-            <button type="button" class="btn btn-primary btn-margin">1x1 up to 20</button>
-            <button type="button" class="btn btn-primary btn-margin">1x1 up to 50</button>
-            <button type="button" class="btn btn-primary btn-margin">1x1 up to 100</button>
+            <button type="button" onclick="window.location.href = '/small1x1';" class="btn btn-primary">Small 1x1</button>
+            <button type="button" onclick="window.location.href = '/upto20';" class="btn btn-primary btn-margin">1x1 up to 20</button>
+            <button type="button" onclick="window.location.href = '/upto50';" class="btn btn-primary btn-margin">1x1 up to 50</button>
+            <button type="button" onclick="window.location.href = '/upto100';" class="btn btn-primary btn-margin">1x1 up to 100</button>
         </div>
     </div>
 </body>
