--- a/src/templates/small1x1.html
+++ b/src/templates/small1x1.html
@@ -4,18 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>small 1x1</title>
+    <link rel="stylesheet" href="stylecss.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script src="../scripts.js"></script>
     <script>
-        checkAnswer(selectedAnswer);
+        function checkAnswer(selectedAnswer) {
+            const correctAnswer = "{{answer}}";
+            const Element = document.getElementById("ifcorrect");
+            if (selectedAnswer === correctAnswer) {
+                Element.innerHTML = "Correct!   +1 Points";
+                setTimeout(function() {
+                    location.reload(); // Lädt die Seite nach 2 Sekunden neu
+                }, 700);
+            } else {
+                Element.innerHTML = "Wrong!";
+                setTimeout(function() {
+                    location.reload(); // Lädt die Seite nach 2 Sekunden neu
+                }, 700);
+            }
+        }
     </script>
 </head>
 <body>
-    <nav class="navbar bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">Small 1x1 Trainer</span>
+          <a class="navbar-brand" href="#">Small 1x1 Trainer</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link" href="/small1x1">Small 1x1</a>
+                <a class="nav-link" href="/1x1upto20">1x1 up to 20</a>
+                <a class="nav-link" href="/1x1upto50">1x1 up to 50</a>
+                <a class="nav-link" href="/1x1upto100">1x1 up to 100</a>
+            </div>
+          </div>
         </div>
-    </nav>
+      </nav>
     <div class="container">
         <h4>{{question}}</h4>
         <div class="d-flex justify-content-between">
@@ -23,7 +49,10 @@
             <button type="button" class="btn btn-primary btn-margin" onclick="checkAnswer('a2')">{{a2}}</button>
             <button type="button" class="btn btn-primary btn-margin" onclick="checkAnswer('a3')">{{a3}}</button>
         </div>
-        <p id="ifcorrect"></p>
+        <div class="shadow-none p-3 mb-5 bg-body-tertiary rounded">
+            <p id="ifcorrect"></p>
+        </div>
+
     </div>
 </body>
 </html>
