Finished first steps

--- a/src/templates/1x1upto20.html
+++ b/src/templates/1x1upto20.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Small 1x1</title>
+    <title>Up to 20</title>
     <link rel="stylesheet" href="stylecss.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script>
@@ -13,12 +13,12 @@
             if (selectedAnswer === correctAnswer) {
                 Element.innerHTML = "Correct!   +1 Points";
                 setTimeout(function() {
-                    location.reload(); // Lädt die Seite nach 2 Sekunden neu
+                    location.reload();
                 }, 700);
             } else {
                 Element.innerHTML = "Wrong!";
                 setTimeout(function() {
-                    location.reload(); // Lädt die Seite nach 2 Sekunden neu
+                    location.reload();
                 }, 700);
             }
         }
