--- a/src/templates/1x1upto100.html
+++ b/src/templates/1x1upto100.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Small 1x1</title>
+    <title>1x1 up to 100</title>
     <link rel="stylesheet" href="stylecss.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script>
@@ -11,7 +11,7 @@
             const correctAnswer = "{{answer}}";
             const Element = document.getElementById("ifcorrect");
             if (selectedAnswer === correctAnswer) {
-                Element.innerHTML = "Correct!   +1 Points";
+                Element.innerHTML = "Correct!   +10 Points";
                 setTimeout(function() {
                     location.reload(); // Lädt die Seite nach 2 Sekunden neu
                 }, 700);
