--- a/templates/1x1upto100.html
+++ b/templates/1x1upto100.html
@@ -13,12 +13,12 @@
             if (selectedAnswer === correctAnswer) {
                 Element.innerHTML = "Correct!   +10 Points";
                 setTimeout(function() {
-                    location.reload(); // Lädt die Seite nach 2 Sekunden neu
+                    location.reload();
                 }, 700);
             } else {
                 Element.innerHTML = "Wrong!";
                 setTimeout(function() {
-                    location.reload(); // Lädt die Seite nach 2 Sekunden neu
+                    location.reload();
                 }, 700);
             }
         }
