now you can see your points

--- a/templates/1x1upto100.html
+++ b/templates/1x1upto100.html
@@ -54,7 +54,10 @@
             </div>
           </div>
         </div>
-      </nav>
+    </nav>
+    <div class="container">
+        <h5>You have {{total_points}} Points</h5>
+    </div>
     <div class="container">
         <h4>{{question}}</h4>
         <div class="d-flex justify-content-between">
