--- a/templates/1x1upto20.html
+++ b/templates/1x1upto20.html
@@ -40,11 +40,11 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Small 1x1 Trainer</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">Small 1x1 Trainer</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
                 <a class="nav-link" href="/small1x1">Small 1x1</a>
@@ -52,9 +52,12 @@
                 <a class="nav-link" href="/1x1upto50">1x1 up to 50</a>
                 <a class="nav-link" href="/1x1upto100">1x1 up to 100</a>
             </div>
-          </div>
+            </div>
         </div>
-      </nav>
+    </nav>
+    <div class="container">
+        <h5>You have {{total_points}} Points</h5>
+    </div>
     <div class="container">
         <h4>{{question}}</h4>
         <div class="d-flex justify-content-between">
@@ -65,7 +68,6 @@
         <div class="shadow-none p-3 mb-5 bg-body-tertiary rounded">
             <p id="ifcorrect"></p>
         </div>
-
     </div>
 </body>
 </html>
