--- a/templates/1x1upto50.html
+++ b/templates/1x1upto50.html
@@ -56,6 +56,9 @@
         </div>
       </nav>
     <div class="container">
+        <h5>You have {{total_points}} Points</h5>
+    </div>
+    <div class="container">
         <h4>{{question}}</h4>
         <div class="d-flex justify-content-between">
             <button type="button" class="btn btn-primary" onclick="checkAnswer('a1')">{{a1}}</button>
