--- a/templates/1x1upto100.html
+++ b/templates/1x1upto100.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="css/stylecss.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script>
+        var countdownActive = true;
+
         function checkAnswer(selectedAnswer) {
+            if (!countdownActive) {
+                return;
+            }
+
             const correctAnswer = "{{answer}}";
             const Element = document.getElementById("ifcorrect");
             if (selectedAnswer === correctAnswer) {
@@ -23,6 +29,7 @@
                 }, 700);
             }
         }
+        
         function addPoints() {
             fetch("/add_20points", {
                 method: "POST",
