--- a/templates/1x1upto20.html
+++ b/templates/1x1upto20.html
@@ -7,11 +7,18 @@
     <link rel="stylesheet" href="stylecss.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script>
+        var countdownActive = true;
+
         function checkAnswer(selectedAnswer) {
+            if (!countdownActive) {
+                return;
+            }
+            countdownActive = false;
+
             const correctAnswer = "{{answer}}";
             const Element = document.getElementById("ifcorrect");
             if (selectedAnswer === correctAnswer) {
-                Element.innerHTML = "Correct!   +3 Points";
+                Element.innerHTML = "Correct! +3 Points";
                 addPoints();
                 setTimeout(function() {
                     location.reload();
@@ -23,6 +30,7 @@
                 }, 700);
             }
         }
+        
         function addPoints() {
             fetch("/add_3points", {
                 method: "POST",
