--- a/templates/small1x1.html
+++ b/templates/small1x1.html
@@ -7,11 +7,18 @@
     <link rel="stylesheet" href="stylecss.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script>
+        var countdownActive = true;
+
         function checkAnswer(selectedAnswer) {
+            if (!countdownActive) {
+                return;
+            }
+            countdownActive = false;
+
             const correctAnswer = "{{answer}}";
             const Element = document.getElementById("ifcorrect");
             if (selectedAnswer === correctAnswer) {
-                Element.innerHTML = "Correct!   +1 Point";
+                Element.innerHTML = "Correct! +1 Point";
                 addPoint();
             } else {
                 Element.innerHTML = "Wrong!";
@@ -20,21 +27,20 @@
                 location.reload();
             }, 700);
         }
-    
+
         function addPoint() {
             fetch("/add_1point", {
                 method: "POST",
             })
             .then(response => response.json())
             .then(data => {
-                console.log(data.message); 
+                console.log(data.message);
             })
             .catch(error => {
                 console.error('Error:', error);
             });
         }
     </script>
-    
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -54,6 +60,9 @@
           </div>
         </div>
       </nav>
+    <div class="container">
+        <h5>You have {{total_points}} Points</h5>
+    </div>
     <div class="container">
         <h4>{{question}}</h4>
         <div class="d-flex justify-content-between">
