--- a/templates/small1x1.html
+++ b/templates/small1x1.html
@@ -61,7 +61,7 @@
         </div>
       </nav>
     <div class="container">
-        <h5>You have {{total_points}} Points</h5>
+        <h5>You have got {{total_points}} Points</h5>
     </div>
     <div class="container">
         <h4>{{question}}</h4>
