--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
       </div>
     </nav>
     <div class="container">
-      <h5>You have {{total_points}} Points</h5>
+      <h5>You have got {{total_points}} Points</h5>
     </div>
     <h4 class="container mt-3">What would you like to start with?</h4>
     <div class="container mt-3">
