--- a/templates/1x1upto100.html
+++ b/templates/1x1upto100.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1x1 up to 100</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/stylecss.css') }}"></head>
     <link rel="stylesheet" href="css/stylecss.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script>
@@ -77,5 +78,6 @@
         </div>
 
     </div>
+    <p class="bottom-text">Just challenge you</p>
 </body>
 </html>
