--- a/templates/1x1upto20.html
+++ b/templates/1x1upto20.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Up to 20</title>
-    <link rel="stylesheet" href="stylecss.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/stylecss.css') }}"></head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script>
         var countdownActive = true;
@@ -77,5 +77,6 @@
             <p id="ifcorrect"></p>
         </div>
     </div>
+    <p class="bottom-text">Just challenge you</p>
 </body>
 </html>
